# SOEM-Nodejs

./: .eslintrc.json  .gitignore  .gitmodules  .npmignore  .npmrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.en.md  README.md  audit-ci.json  binding.gyp  cmake-js.json  jest.config.json  package-lock.json  package.json  test-submodule.ps1  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: API-SoemMaster.md  NPM_RELEASE_READY.md  PRODUCTION_READY.md  RELEASE_GUIDE.md  interface-management.md  soem_node_squelette_de_package_npm_soem_bindings.md
docs/SOEM/: Building SOEM.md  EtherCAT protocol overview.md  Glossary.md  Introduction.md  SOEM API.md  Writing an application.md
example/: scan-and-read.js
examples/: auto-scan.js  ethercat-utils.d.ts  ethercat-utils.js  interface-manager.js  list-interfaces.js  scan-and-read.js
include/: ethercat.h
scripts/: ci-test-module.js  generate-ec-options.js  postinstall.js  production-check.ps1  production-check.sh  rebuild-electron.js  release.ps1  release.sh  test-ci-simulation.js  test-ci.ps1  test-ci.sh
src/: addon.cc  index.ts  node_soem_legacy.cc  soem_wrap.hpp
test/: basic.test.ts  ethercat-utils-simple.test.ts  ethercat-utils.test.ts  integration.test.ts  setup.ts  soem-master.test.ts  soemmaster.unit.test.ts
test/__mocks__/: bindings.js  soem_addon.js
test/integration/: soem.integration.test.ts
types/: index.d.ts
